Finalizing the cherry on the cake that is the article

--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -69,8 +69,8 @@
                 commodius agimus. An nisi populari fama?
               </p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed haec omittamus; Hoc Hieronymus summum bonum esse dixit. Duo Reges: constructio interrete.
-                <b>Hoc Hieronymus summum bonum esse dixit.</b>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed haec omittamus; Hoc Hieronymus summum bonum esse dixit.
+                <b>Hoc Hieronymus summum bonum esse dixit.</b>Duo Reges: constructio interrete.
               </p>
               <h2>Prioris generis est docilitas, memoria</h2>
               <ol>
