--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -69,7 +69,7 @@
                 commodius agimus. An nisi populari fama?
               </p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed haec omittamus; Hoc Hieronymus summum bonum esse dixit.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed haec omittamus;
                 <b>Hoc Hieronymus summum bonum esse dixit.</b>Duo Reges: constructio interrete.
               </p>
               <h2>Prioris generis est docilitas, memoria</h2>
