--- a/form/04-article.html
+++ b/form/04-article.html
@@ -164,7 +164,7 @@
                   <label for="your-first-name">First Name</label>
                   <div class="form-field">
                     <span class="form-field-container">
-                      <input type="text" name="your-first-name" id="your-first-name" placeholder="Mike" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on" accesskey="f" required />
+                      <input type="text" name="your-first-name" id="your-first-name" placeholder="e.g. Mike" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on" accesskey="f" required />
                     </span>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                   <label for="your-last-name">Last Name</label>
                   <div class="form-field">
                     <span class="form-field-container">
-                      <input type="text" name="your-last-name" id="your-last-name" placeholder="Smith" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on" accesskey="l" required />
+                      <input type="text" name="your-last-name" id="your-last-name" placeholder="e.g. Smith" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on" accesskey="l" required />
                     </span>
                   </div>
                 </div>
@@ -184,7 +184,7 @@
                         type="email"
                         name="your-email"
                         id="your-email"
-                        placeholder="youremail@gmail.com"
+                        placeholder="e.g. youremail@gmail.com"
                         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                         maxlength="55"
                         autocomplete="on"
@@ -201,7 +201,17 @@
                   <label for="your-title">Title</label>
                   <div class="form-field">
                     <span class="form-field-container">
-                      <input type="text" name="your-title" id="your-title" placeholder="I loved that article" pattern="[A-Za-zÀ-ž\s]{4,}" maxlength="75" autocomplete="on" accesskey="t" required />
+                      <input
+                        type="text"
+                        name="your-title"
+                        id="your-title"
+                        placeholder="e.g. I loved that article"
+                        pattern="[A-Za-zÀ-ž\s]{4,}"
+                        maxlength="75"
+                        autocomplete="on"
+                        accesskey="t"
+                        required
+                      />
                     </span>
                   </div>
                 </div>
